--- a/SampleLogin/login.html
+++ b/SampleLogin/login.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>Login</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-        <link href="style.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+		<link href="style.css" rel="stylesheet" type="text/css">
     </head>
 	<body>
 		<div class="login">
@@ -18,8 +19,13 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
+				
 				<input type="submit" value="Login">
 			</form>
+			<br><br>
+			<a href="register.html"><h1>Register Here</h1></a>
 		</div>
+
+		
 	</body>
 </html>
