--- a/SampleLogin/login.html
+++ b/SampleLogin/login.html
@@ -23,7 +23,7 @@
 				<input type="submit" value="Login">
 			</form>
 			<br><br>
-			<a href="register.html"><h1>Register Here</h1></a>
+			<!-- <a href="register.html"><h1>Register Here</h1></a> -->
 		</div>
 
 		
