--- a/SampleLogin/register.html
+++ b/SampleLogin/register.html
@@ -22,6 +22,10 @@
 					<i class="fas fa-envelope"></i>
 				</label>
 				<input type="email" name="email" placeholder="Email" id="email" required>
+				<label for="visitor">
+					<i class="fas fa-user-clock"></i>
+				</label>
+				<input type="text" name="visitor" placeholder="visitor - Y/N" id="visitor" pattern="[YN]" required>
 				<input type="submit" value="Register">
 			</form>
 		</div>
