Updates for sprint 2

--- a/SampleLogin/login.html
+++ b/SampleLogin/login.html
@@ -24,6 +24,7 @@
 			</form>
 			<br><br>
 			<!-- <a href="register.html"><h1>Register Here</h1></a> -->
+			<a href="contact.html"><h1>Contact Us</h1></a>
 		</div>
 
 		
