password reset system

--- a/SampleLogin/login.html
+++ b/SampleLogin/login.html
@@ -25,6 +25,7 @@
 			<br><br>
 			<!-- <a href="register.html"><h1>Register Here</h1></a> -->
 			<a href="contact.html"><h1>Contact Us</h1></a>
+			<a href="resetForm.html"><h1>Reset Password</h1></a>
 		</div>
 
 		
