--- a/SampleLogin/registerUser.html
+++ b/SampleLogin/registerUser.html
@@ -1,21 +1,3 @@
-<?php
-
-session_start();
-
-if (!isset($_SESSION['loggedin'])) {
-	header('Location: index.html');
-	exit;
-}
-
-if($_SESSION["id"]!=16)
-{
-   header('Location: home.php');
-   echo 'console.log("Admin Connected")';
-   exit;
-}
-
-?>
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -27,10 +9,7 @@ if($_SESSION["id"]!=16)
 	<body>
 	<nav class="navtop">
 			<div>
-				<h1>Register a User</h1>
-				<a href="admin.php"><i class="fas fa-home"></i>Home</a>
-				<a href="downloads.php"><i class="fas fa-download"></i>Downloads</a>
-                <a href="logout.php"><i class="fas fa-sign-out-alt"></i>Logout</a>
+				<h1>Register</h1>
 			</div>
 		</nav>
 		<div class="register">
@@ -48,6 +27,10 @@ if($_SESSION["id"]!=16)
 					<i class="fas fa-envelope"></i>
 				</label>
 				<input type="email" name="email" placeholder="Email" id="email" required>
+				<label for="color">
+					<i class="fas fa-palette"></i>
+				</label>
+				<input type="text" name="color" placeholder="Favorite Color" id="color">
 				<input type="submit" value="Register">
 			</form>
 		</div>
