--- a/SampleLogin/login.html
+++ b/SampleLogin/login.html
@@ -19,15 +19,15 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
+				<div class="g-recaptcha" data-sitekey="6LePZ-UZAAAAAOzsEetpqUXGowqEI0YKQVJpDZ68"></div>
 				
-				<input type="submit" value="Login">
+				<input type="submit" name="submit" value="Login">
 			</form>
 			<br><br>
 			<!-- <a href="register.html"><h1>Register Here</h1></a> -->
 			<a href="contact.html"><h1>Contact Us</h1></a>
 			<a href="resetForm.html"><h1>Reset Password</h1></a>
 		</div>
-
-		
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</body>
 </html>
