--- a/SampleLogin/registerUser.html
+++ b/SampleLogin/registerUser.html
@@ -30,9 +30,12 @@
 				<label for="color">
 					<i class="fas fa-palette"></i>
 				</label>
+				
 				<input type="text" name="color" placeholder="Favorite Color" id="color">
-				<input type="submit" value="Register">
+				<div class="g-recaptcha" data-sitekey="6LePZ-UZAAAAAOzsEetpqUXGowqEI0YKQVJpDZ68"></div>
+				<input type="submit" name="submit" value="Register">
 			</form>
 		</div>
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</body>
 </html>
