--- a/SampleLogin/resetForm.html
+++ b/SampleLogin/resetForm.html
@@ -27,8 +27,11 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="New Password" id="password" required>
-				<input type="submit" value="Reset">
+				<div class="g-recaptcha" data-sitekey="6LePZ-UZAAAAAOzsEetpqUXGowqEI0YKQVJpDZ68"></div>
+				<input type="submit" name="submit" value="Reset">
 			</form>
 		</div>
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 	</body>
 </html>
